--- a/css/style.css
+++ b/css/style.css
@@ -210,14 +210,14 @@ header nav {
       height: 95px;
       bottom: 0px;
       left: 0;
-      background: url(/Blog-Final/img/wave.png);
+      background: url(../img/wave.png);
       animation: animate 10s linear infinite;
     }
     section .wave::before{
       content: '';
       width: 100%;
       height: 95px;
-      background: url(/Blog-Final/img/wave.png);
+      background: url(../img/wave.png);
       position: absolute;
       top: 0;
       left: 0;
@@ -228,7 +228,7 @@ header nav {
       content: '';
       width: 100%;
       height: 95px;
-      background: url(/Blog-Final/img/wave.png);
+      background: url(../img/wave.png);
       position: absolute;
       top: 0;
       left: 0;
